Fix word wrap for alerts

--- a/service/ro/static/css/style.css
+++ b/service/ro/static/css/style.css
@@ -9,7 +9,7 @@ body {
     font-size: 1.5em;
 }
 
-.shit {
+.shit, .alert {
     word-wrap: anywhere;
 }
 
